Add endpoint price
